[package]
name = "fuzzing-test-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fuzzing-test]
path = ".."

[[bin]]
name = "sum"
path = "fuzz_targets/sum.rs"
test = false
doc = false
bench = false

[[bin]]
name = "divide"
path = "fuzz_targets/divide.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nutype-user"
path = "fuzz_targets/nutype-user.rs"
test = false
doc = false
bench = false
